Update to version 3.0 (require Java 21 with JavaFX included, for example Azul Zulu OpenJDK).